Fix font size in index page title
On mobile devices, title and subtitle (lead text) font size was too big and doesn't fit into available width.

This commit fixes this issue using a lower font size for extra-small mobile devices (the xs- breakpoint in Tailwind CSS). For other devices and screen sizes, original font sizes are used.

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -30,7 +30,8 @@
 
 .hero h1
 {
-	@apply text-5xl text-white font-bold tracking-wider;
+	@apply text-4xl sm:text-5xl;
+	@apply text-white font-bold tracking-wider;
 }
 
 .hero h1::before
@@ -47,7 +48,8 @@
 
 .hero p
 {
-	@apply my-2 text-2xl;
+	@apply my-2;
+	@apply text-xl sm:text-2xl;
 }
 
 .hero footer
